<resources>
    <string name="app_name">Kassa</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Ad</string>
    <string name="prompt_surname">Soyad</string>
    <string name="prompt_phone">Cep Telefonu - 10 Hane</string>
    <string name="prompt_national_id">TC Kimlik No</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Şifre</string>
    <string name="confirm_prompt_password">Şifre Tekrar</string>
    <string name="action_sign_in">Giriş Yap</string>
    <string name="action_fb_sign_in">Facebook ile Bağlan</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">ÜYE OL</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="send_mail">Send Email …</string>
    <string name="no_mail_app">Email app is not present</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="daily">Günlük</string>
    <string name="home">Ev</string>
    <string name="event">Etkinlik</string>
    <string name="work">İş</string>

    <string name="start_date">Başlangıç Tarihi: </string>
    <string name="end_date">Bitiş Tarihi: </string>

    <!--Profile Photo Upload Dialog-->
    <string name="profile_photo_upload_title">Profil fotoğrafı yükle</string>
    <string name="profile_photo_upload_subtitle">Profil fotoğrafı yüklemek / güncellemek için aşağıdaki yöntemlerden birini seç.</string>
    <string name="profile_photo_upload_problem">Profil Fotosu yüklenirken bir sorun oluştu, lütfen daha sonra tekrar deneyin.</string>
    <string name="from_gallery">Galeriden Seç</string>
    <string name="select_photo_from_gallery">Galeriden Fotoğraf Ekle</string>
    <string name="send_my_current_location">Mevcut Lokasyonumu Ekle</string>
    <string name="shoot_photo_for_attachment">Yeni Fotoğraf Ekle</string>
    <string name="shoot_photo">Fotoğraf Çek</string>
    <string name="add_photo_to_work_title">Fotoğraf eklemek ister misin?</string>
    <string name="add_photo_to_work_button">Fotoğraf ekle</string>
    <string name="warning_photo_upload_profile">Profil fotoğrafı ekleyebilmek ya da güncelleyebilmek için çekilen fotoğrafı SD kartınıza yüklememize izin verin.</string>
    <string name="title_activity_event">EventActivity</string>

</resources>
